# Resizing_images

./: CMakeLists.txt  README.md  main.cpp
src/: proiect.cpp  proiect.h
